--- a/Exercícios/ex022/fundo006.html
+++ b/Exercícios/ex022/fundo006.html
@@ -13,6 +13,7 @@
             background-position: center center;
             background-repeat: no-repeat;
            background-size: cover;
+           background-attachment: fixed;
         }
 
 
@@ -20,7 +21,7 @@
             background-color: white;
             margin: auto;
             padding: 10px;
-            width: 400px;
+            max-width: 400px;
             border: 2px solid blue;
             border-radius: 20px;
         }
