--- a/Exercícios/ex023/tabela002.html
+++ b/Exercícios/ex023/tabela002.html
@@ -14,6 +14,8 @@
         table {
             width: 500px;
             border-collapse: collapse;
+
+            position: relative;
         }
 
         caption{
@@ -29,6 +31,13 @@
             border: 1px solid black;
             padding: 10px;
             font-weight: lighter;
+        }
+
+
+        thead > tr > th{
+            position: sticky;
+            top: -1px;
+            background-color: gray;
         }
 
         thead,
